# ros-pr0

./: .clangd  frames_2026-03-01_12.30.52.gv
.cache/clangd/index/: add_client.cpp.F3A79BD9FE4B9D69.idx  add_server.cpp.6A264A4961547AB5.idx  ekf_slam.cpp.1894D4B07432AFF2.idx  publisher.cpp.CA120850D10C2C69.idx  rosidl_generator_cpp__visibility_control.hpp.F1F75FAE26C4943D.idx  sensor.hpp.6328A360D7BD7D74.idx  sensor__builder.hpp.350795FFDFB4757F.idx  sensor__struct.hpp.5720AFAF59548E21.idx  sensor__traits.hpp.58450A2BD855EAB2.idx  sensor__type_support.hpp.AC048A6425E1D154.idx  sensor_pub.cpp.A9A9220758359B81.idx  subscriber.cpp.971352968E97E135.idx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_first_pkg/lib/my_first_pkg/: add_client  add_server  ekf_slam  listener  sensor_pub  talker
install/my_first_pkg/share/ament_index/resource_index/parent_prefix_path/: my_first_pkg
install/my_first_pkg/share/my_first_pkg/: local_setup.sh  package.sh  package.xml
install/my_first_pkg/share/my_first_pkg/launch/: demo.launch.py
install/my_interfaces/include/my_interfaces/my_interfaces/msg/: sensor.h
install/my_interfaces/include/my_interfaces/my_interfaces/msg/detail/: sensor__builder.hpp  sensor__rosidl_typesupport_fastrtps_cpp.hpp  sensor__rosidl_typesupport_introspection_c.h  sensor__struct.h  sensor__struct.hpp  sensor__type_support.c  sensor__type_support.h
install/my_interfaces/local/lib/python3.10/dist-packages/my_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
install/my_interfaces/local/lib/python3.10/dist-packages/my_interfaces/msg/: _sensor_s.c
install/my_interfaces/share/ament_index/resource_index/parent_prefix_path/: my_interfaces
install/my_interfaces/share/my_interfaces/: local_setup.sh  package.sh
log/: latest_build
my_first_pkg/: CMakeLists.txt
my_first_pkg/src/: add_client.cpp  add_server.cpp  ekf_slam.cpp  publisher.cpp  sensor_pub.cpp  subscriber.cpp
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/msg/: Sensor.msg
